add team read me

--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,11 @@ knitr::opts_chunk$set(
 
 If you were to try and analyze statistics for your favorite hockey team, or try to predict an outcome of the next match you'd probably browsed the Internet in search of convenient tools to get the data you want from the NHL website. And while there is a bunch of NHL API packages available in python we yet to see this kind of variety in R libraries. The rpuck library is designed to allow users the ability to get both relevant and historical statistics for NHL conveniently. As of now, the package has limited functionality that can further be extended based on feedback.
 
+### Team
+
+| [Jarvis Nederlof](https://github.com/jnederlo) | [Xugang Zhong](https://github.com/chuusan) | [Polina Romanchenko ](https://github.com/PolinaRomanchenko)| [Manish Joshi](https://github.com/ManishPJoshi)|
+|:------------:|:--------------:|:--------------:|:--------------:|
+
 ## Installation
 
 You can install the released version of rpuck from [CRAN](https://CRAN.R-project.org) with:
