--- a/README.Rmd
+++ b/README.Rmd
@@ -22,6 +22,11 @@ knitr::opts_chunk$set(
 
 If you were to try and analyze statistics for your favorite hockey team, or try to predict an outcome of the next match you'd probably browse the internet in search of convenient tools to get the data you want from the NHL website. While there are a bunch of NHL API packages available in python, there is limited availability of many R packages. Therefore, the rpuck library is designed to allow users the ability to conveniently get both relevant and historical statistics from the publicly available but as of yet undocumented NHL.com API. As of now the package has limited functionality, and is considered a work-in-progress. We will add in additional functionality in the coming weeks which can easily be extended based on feedback we recieve.
 
+## Team
+
+| [Jarvis Nederlof](https://github.com/jnederlo) | [Xugang Zhong](https://github.com/chuusan) | [Polina Romanchenko ](https://github.com/PolinaRomanchenko)| [Manish Joshi](https://github.com/ManishPJoshi)|
+|:------------:|:--------------:|:--------------:|:--------------:|
+
 ## Installation
 
 You can install the released version of rpuck from [CRAN](https://CRAN.R-project.org) with:
@@ -39,13 +44,13 @@ devtools::install_github("UBC-MDS/rpuck")
 
 ## Features
 
-- draft_pick(pick_number=NULL, round_number=NULL, year=NULL):
+- `draft_pick(pick_number=NULL, round_number=NULL, year=NULL)`:
   - The draft_pick(pick_number=None, round_number=None, year=None) function makes an API call to the drafts summary on the NHL.com API. The function returns information about draft picks for the specified arguments and stores them in a data frame.
-- attendance(regular=True, playoffs=True, season=NULL):
+- `attendance(regular=True, playoffs=True, season=NULL)`:
   - The attendance() function makes a query to the Attendance API to get the NHL’s seasonal and playoff attendance numbers. The function displays attendance numbers in a ggplot chart.
-- team_stats(start_season=NULL, end_season=NULL):
+- `team_stats(start_season=NULL, end_season=NULL)`:
   - The team_stats() function makes an API call to the team summary endpoint on the NHL.com API. The function returns team seasonal stats for given seasons sorted by total team points.
-- player_stats(start_date=NULL, end_date=NULL):
+- `player_stats(start_date=NULL, end_date=NULL)`:
   - The player_stats() function makes an API call to the player summary endpoint on the NHL.com API. The function returns the top 100 player stats for a given date range as sorted by total points.
   
 
