--- a/README.Rmd
+++ b/README.Rmd
@@ -39,7 +39,7 @@ install.packages("rpuck")
 
 And the development version from [GitHub](https://github.com/) with:
 
-``` r
+```r
 # install.packages("devtools")
 devtools::install_github("UBC-MDS/rpuck")
 ```
@@ -55,6 +55,41 @@ devtools::install_github("UBC-MDS/rpuck")
 - `player_stats(start_date=NULL, end_date=NULL)`:
   - The player_stats() function makes an API call to the player summary endpoint on the NHL.com API. The function returns the top 100 player stats for a given date range as sorted by total points.
   
+## Usage
+
+The package can extract and visualize data from NHL statistics in convenient format. Below is an example of how one can use rpuck.
+
+To load the package: 
+```r
+library(rpuck)
+```
+
+Get a chart showing the attendance over a specified time period:
+```r
+attendance <- attendance(regular=TRUE, playoffs=TRUE, start_season= 2000, end_season=2018)
+```
+![attendance](img/attendance-1.png)
+
+Result of draft by pick number, draft number and year in summary report:
+```r
+pick <- draft_pick(pick_number = 1, round_number = 2, year = 2019)
+```
+![draft](img/draft.png)
+
+Query the top 100 player's stats from the player's summary report:
+```r
+player_s <- player_stats(start_date = "2019-10-02", end_date = "2020-02-28")
+head(player_s)
+```
+![player_stat](img/player_stat.png)
+
+Stats for teams specified by start year or start year and end year:
+```r
+attendance <- team_stats(start_season = "19801981", end_season = "19891990")
+head(attendance)
+```
+![team_stat](img/team_stat.png)
+
 ## Tests
 
 We have included a variety of tests for each function in the `tests\testthat` directory. The tests check that the functions error gracefully and that proper function calls return the correct data/objects.
@@ -67,6 +102,13 @@ There are some packages written in the R language that are focused on providing 
 ## Dependencies
 R version 3.6.1 and R packages:
 
-- knitr==1.26 [@knitr]
-- tidyverse==1.2.1 [@tidyverse]
-- Json
+- dplyr==0.8.3 [@dplyr]
+- httr==1.4.1 [@httr]
+- ggplot2==3.2.1 [@ggplot2]
+- jsonlite==1.6 [@jsonlite]
+- grid==3.6.2 [@grid]
+- gridExtra==2.3 [@gridExtra]
+- glue==1.3.1 [@glue]
+- tidyr=1.0.0 [@tidyr]
+- testthat==2.3.1 [@testthat]
+- scales==1.0.0 [@scales]
