--- a/vignettes/rpuck.Rmd
+++ b/vignettes/rpuck.Rmd
@@ -66,7 +66,7 @@ Get a chart showing the attendance over a specified time period:
 attendance <- attendance(regular=TRUE, playoffs=TRUE, start_season= 2001, end_season=2018)
 ```
 
-![attendance](img/attendance.png)
+![attendance](../img/attendance.png)
 
 Result of draft by pick number, draft number and year in summary report:
 
@@ -74,7 +74,7 @@ Result of draft by pick number, draft number and year in summary report:
 pick <- draft_pick(pick_number = 1, round_number = 2, year = 2019)
 ```
 
-![draft](img/draft.png)
+![draft](../img/draft.png)
 
 Query the top 100 player's stats from the player's summary report:
 
@@ -83,7 +83,7 @@ player_s <- player_stats(start_date = "2019-10-02", end_date = "2020-02-28")
 head(player_s)
 ```
 
-![player_stat](img/player_stat.png)
+![player_stat](../img/player_stat.png)
 
 Stats for teams specified by start year or start year and end year:
 
@@ -92,7 +92,7 @@ attendance <- team_stats(start_season = "19801981", end_season = "19891990")
 head(attendance)
 ```
 
-![team_stat](img/team_stat.png)
+![team_stat](../img/team_stat.png)
   
 
   
