--- a/README.Rmd
+++ b/README.Rmd
@@ -64,45 +64,38 @@ The package can extract and visualize data from NHL statistics in convenient for
 
 To load the package: 
 
-```r
+```{r, warning=FALSE, echo=FALSE}
 library(rpuck)
 ```
 
 Get a chart showing the attendance over a specified time period:
 
-```r
-attendance <- attendance(regular=TRUE, playoffs=TRUE, start_season= 2001, end_season=2018)
+```{r}
+attendance(regular=TRUE, playoffs=FALSE, start_season= 1990, end_season=2018)
 ```
 
-![attendance](img/attendance.png)
 
 Result of draft by pick number, draft number and year in summary report:
 
-```r
-pick <- draft_pick(pick_number = 1, round_number = 2, year = 2019)
+```{r}
+draft_pick(pick_number = 1, round_number = 2, year = 2019)
 ```
 
-![draft](img/draft.png)
 
 Query the top 100 player's stats from the player's summary report:
 
-```r
+```{r}
 player_s <- player_stats(start_date = "2019-10-02", end_date = "2020-02-28")
 head(player_s)
 ```
 
-![player_stat](img/player_stat.png)
 
 Stats for teams specified by start year or start year and end year:
 
-```r
+```{r}
 attendance <- team_stats(start_season = "19801981", end_season = "19891990")
 head(attendance)
 ```
-
-![team_stat](img/team_stat.png)
-  
-
   
 ## Tests
 
